--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,13 +28,15 @@ outputs:
       script: 'python -m pip install . --no-deps --ignore-installed -vvv '
     requirements:
       host:
+        - flit-core
         - pip
-        - python >=3.6
+        - python >=3.8
       run:
-        - aiida-core >=1.3.0,<2
-        - aiida-pseudo >=0.6.2
-        - ase >=3.18,<4.0.0
-        - python >=3.6
+        - aiida-core >=2.0.0,<3.0.0
+        - aiida-pseudo >=0.7.0
+        # TODO - aiida-optimize >=0.5.0
+        - ase
+        - python >=3.8
         - seekpath >=1.9.3,<2
         - sisl
       run_constrained:
